dynamic extraction of beaninfo template to get the most updated version embdedded nimbus 9.48 sources (shadowed) to avoid conflicts with weblogic libraries embed rhino scripting engine to support java version > 15